<resources>
    <string name="app_name">SparePapTakeHomeAssignment</string>
    <string name="maximum_accepted_amount_is_1_000_000">"Maximum accepted amount is 1,000,000 "</string>


    <string name="one">1</string>
    <string name="kes">"KES "</string>
    <string name="_0_00">0.00</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="del">DEL</string>
    <string name="_0">0 .</string>
    <string name="add">ADD</string>
</resources>