<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:id="@+id/inputRelLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_marginTop="5dp"
                android:textAlignment="textEnd"
                android:text="@string/kes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="40sp" />

            <TextView
                android:layout_marginTop="5dp"
                android:textAlignment="textEnd"
                android:text="@string/_0_00"
                android:id="@+id/input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="40sp" />

        </LinearLayout>

    </RelativeLayout>



    <RelativeLayout
        android:layout_below="@+id/inputRelLay"
        android:id="@+id/inputActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/black" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/_2"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/black" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/_3"
                    android:textColor="@color/black"
                    android:textSize="28sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/_4"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/black" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/_5"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/black" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/_6"
                    android:textColor="@color/black"
                    android:textSize="28sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/_7"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/black" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/_8"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/black" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/_9"
                    android:textColor="@color/black"
                    android:textSize="28sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonDel"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/del"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/black" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/black" />

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textColor="@color/black"
                    android:textSize="28sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/black" />

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:background="@color/dark_navy"
        android:layout_below="@+id/inputActions"
        android:layout_above="@+id/totalView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycleRelative">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycle_view"/>

    </RelativeLayout>




    <View
        android:id="@+id/totalView"
        android:layout_above="@+id/outputLL"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/gray" />



    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/outputLL"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:background="@color/dark_navy"
            android:paddingBottom="6dp"
            android:paddingEnd="6dp"
            android:textAlignment="textEnd"
            android:text="@string/_0_00"
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="50sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</RelativeLayout>